[package]
build = "build.rs"
name = "rshyper"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false
crate-type = ["lib"]
doc = true
doctest = true
test = true

[[example]]
name = "basic_usage"
required-features = [
  "hyper_map",
  "macros",
]

[[example]]
name = "hyper_map"
required-features = [
  "hyper_map",
  "macros",
  "tracing",
]

[[test]]
name = "macros"
required-features = [
  "hyper_map",
  "macros",
]

[dependencies]
# core modules
rshyper-core = { workspace = true }
# optional dependencies
rshyper-algo = { optional = true, workspace = true }
rshyper-hmap = { optional = true, workspace = true }

[dev-dependencies]
rand = { features = ["std"], workspace = true }
tracing = { features = ["std"], workspace = true }
tracing-subscriber = { features = [
  "ansi",
  "chrono",
  "serde",
  "std",
], workspace = true }

[features]
default = [
  "algo",
  "hyper_map",
  "macros",
  "std",
]

full = [
  "default",
  "json",
  "rand",
  "serde",
  "tracing",
]

# ************* [FF:Flags] *************
algo = ["dep:rshyper-algo"]

hash_graph = ["hyper_map"]

hyper_map = [
  "dep:rshyper-hmap",
  "std",
]

macros = []

# ************* [FF:Environments] *************
nightly = [
  "rshyper-algo?/nightly",
  "rshyper-core/nightly",
  "rshyper-hmap?/nightly",
]

std = [
  "alloc",
  "rshyper-algo?/std",
  "rshyper-core/std",
  "rshyper-hmap?/std",
]

wasi = [
  "alloc",
  "rshyper-algo?/wasi",
  "rshyper-core/wasi",
  "rshyper-hmap?/wasi",
]

wasm = [
  "alloc",
  "wasm_bindgen",
  "rshyper-algo?/wasm",
  "rshyper-core/wasm",
  "rshyper-hmap?/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
  "rshyper-algo?/alloc",
  "rshyper-core/alloc",
  "rshyper-hmap?/alloc",
]

json = [
  "alloc",
  "rshyper-core/json",
  "rshyper-hmap?/json",
]

rand = [
  "rng",
  "rshyper-core/rand",
  "rshyper-hmap?/rand",
]

rayon = [
  "rshyper-algo?/rayon",
  "rshyper-core/rayon",
  "rshyper-hmap?/rayon",
]

rng = [
  "rshyper-core/rng",
  "rshyper-hmap?/rng",
]

serde = [
  "rshyper-algo?/serde",
  "rshyper-core/serde",
  "rshyper-hmap?/serde",
]

serde_json = [
  "rshyper-core/serde_json",
  "rshyper-hmap?/serde_json",
]

tracing = [
  "rshyper-algo?/tracing",
  "rshyper-core/tracing",
  "rshyper-hmap?/tracing",
]

wasm_bindgen = [
  "rshyper-algo?/wasm_bindgen",
  "rshyper-core/wasm_bindgen",
  "rshyper-hmap?/wasm_bindgen",
]
